fixed button alignment on checklist page

--- a/public/assets/backend/css/reports.css
+++ b/public/assets/backend/css/reports.css
@@ -532,6 +532,19 @@
         width: 100% !important;
         /* display: flex; */
     }
+
+    .btn-group{
+        display: block !important;
+    }
+
+    .btn-group button{
+        width: 100% !important;
+        margin: 1rem 0rem !important ;
+    }
+
+    .margin-top{
+        margin-top: 50px !important;
+    }
 }
 
 
