--- a/public/assets/frontend/css/custom.css
+++ b/public/assets/frontend/css/custom.css
@@ -60,3 +60,10 @@ body {
     /* margin: 2rem !important; */
     /* padding: 2rem !important; */
 }
+
+
+@media (max-width: 991.98px) {
+    .home-content-header2 {
+        display: none;
+    }
+}
